packages/commonjs/test/fixtures/samples/invalid-syntax/main.js
/* eslint-disable */
export const foo = 2,